@@ -164,6 +164,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17071: Signature.bind() now works when one of the keyword arguments
+  is named ``self``.
+
 - Issue #12004: Fix an internal error in PyZipFile when writing an invalid
   Python file.  Patch by Ben Morgan.
 
